--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".views.ResolutionActivity" />
         <activity android:name=".views.VerifyActivity" />
+        <activity android:name=".views.SettingsActivity" />
     </application>
 
 </manifest>
