--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.draco.sated"
+        applicationId "com.draco.purr"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
