--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     implementation 'androidx.preference:preference-ktx:1.1.1'
-    implementation 'androidx.fragment:fragment-ktx:1.3.4'
-
+    
+    implementation 'androidx.activity:activity-ktx:1.2.4'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
